Bug 1601585 - Make `Document::EditingStateChanged()` stop calling `HTMLEditor::BeginingOfDocument()` when there is a pending state change for `contenteditable` elements and there is a selection range r=smaug

For backward compatibility, `Document::EditingStateChanged()` calls
`HTMLEditor::BeginingOfDocument()` to initialize selection when the document
becomes editable first time.  However, it checks whether
`Document::mEditingState` was ``EditingState::eOff` or not.  This looks enough,
but not so because `Document::MaybeEditingStateChanged()` calls it
asynchronously if `contenteditable` element appears at not safe to run script.
Therefore, this patch makes it check `Document::mContentEditableCount` value
which is modified synchronously from `Element::AfterSetAttr()` (additionally,
this makes it check whether there is at least a range in normal selection too,
though).

Differential Revision: https://phabricator.services.mozilla.com/D62814